# data-model-cli

./: CHANGELOG.md  Makefile.am  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
cov_docker_script/: README.md  component_config.json  configure_options.conf
source/: Makefile.am  ccsp_message_bus_client_tool.c
source/MsgBusTestClient/: Makefile.am  MsgBusTestClientApp.c
source/MsgBusTestServer/: Makefile.am  cosa_MsgBusTest_dml.c  cosa_MsgBusTest_dml.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/MsgBusTestServer/config/: MsgBusTest.XML
source/test/: Makefile.am  run_ut.sh
source/test/CcspDmcliTest/: CcspDMCLI_Mock.cpp  CcspDMCLI_Mock.h  CcspDmcliTest.cpp  Makefile.am  gtest_main.cpp
source/test/CcspDmcliTest/MsgBusTest/: MsgBusTestClientApp.cpp  MsgBusTest_dml.cpp
